# voip2crm

./: .env.example  .gitattributes  .gitignore  AWS_DEPLOY.md  HOMELAB.md  Makefile  README.md  WEBHOOK.md  config.example.yaml  pyproject.toml  requirements.txt  run.py  serve.py  setup.sh
aws/: Dockerfile  lambda_handler.py
examples/: openphone_recording.json  openphone_transcript.json
gv_crm/: __init__.py  cli.py  config.py  extract.py  pipeline.py  transcribe.py
gv_crm/crm/: base.py  hubspot.py
gv_crm/webhook/: __init__.py  base.py  openphone.py  server.py  twilio.py
homelab/: crontab.example  gv-crm-webhook.service  gv-crm.service  install_whisperx.sh  run_batch.ps1  run_batch.sh  test_webhook.sh  voip2crm-webhook.service  voip2crm.service  voip2crm.timer
voip2crm/: alerts.py  cli.py  config.py  gmail_source.py  models.py  pipeline.py  state.py
voip2crm/crm/: __init__.py  local.py  twenty.py
voip2crm/webhook/: base.py  openphone.py  server.py  twilio.py
